--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             </tr>
         </table>
     </div>
+    <script src = "script.js"></script>
     <script type="module">
       // Import the functions you need from the SDKs you need
       import { initializeApp } from "https://www.gstatic.com/firebasejs/9.6.10/firebase-app.js";
