--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     <script type="module">
       // Import the functions you need from the SDKs you need
       import { initializeApp } from "https://www.gstatic.com/firebasejs/9.6.10/firebase-app.js";
+      import { getFirestore, collection, getDocs } from "https://www.gstatic.com/firebasejs/9.6.10/firebase-firestore.js";
       // TODO: Add SDKs for Firebase products that you want to use
       // https://firebase.google.com/docs/web/setup#available-libraries
     
@@ -47,6 +48,15 @@
     
       // Initialize Firebase
       const app = initializeApp(firebaseConfig);
+
+      const db = getFirestore();
+
+      const colRef = collection(db, 'Museums');
+
+      getDocs(colRef)
+        .then((snapshot) => { 
+          console.log(snapshot.docs)
+        })
     </script>
   </body>
 </html>
