--- a/index.html
+++ b/index.html
@@ -32,31 +32,26 @@
     <script type="module">
       // Import the functions you need from the SDKs you need
       import { initializeApp } from "https://www.gstatic.com/firebasejs/9.6.10/firebase-app.js";
-      import { getFirestore, collection, getDocs } from "https://www.gstatic.com/firebasejs/9.6.10/firebase-firestore.js";
+      import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.6.10/firebase-analytics.js";
+      import { getFirestore } from "https://www.gstatic.com/firebasejs/9.6.10/firebase-firestore.js"
       // TODO: Add SDKs for Firebase products that you want to use
       // https://firebase.google.com/docs/web/setup#available-libraries
     
       // Your web app's Firebase configuration
+      // For Firebase JS SDK v7.20.0 and later, measurementId is optional
       const firebaseConfig = {
-        apiKey: "AIzaSyA5zBmkaOIObKWhvgdGiJwsmMX3QXyssjY",
-        authDomain: "final-v2-347015.firebaseapp.com",
-        projectId: "final-v2-347015",
-        storageBucket: "final-v2-347015.appspot.com",
-        messagingSenderId: "744120202203",
-        appId: "1:744120202203:web:1965d67cc7f3afacb7adfe"
+        apiKey: "AIzaSyBLFPNtuB2b14SSjo_MqIvD7xgvDLKaulc",
+        authDomain: "museumapp-b308f.firebaseapp.com",
+        projectId: "museumapp-b308f",
+        storageBucket: "museumapp-b308f.appspot.com",
+        messagingSenderId: "714957279093",
+        appId: "1:714957279093:web:1583bc0b98304d9def0d3c",
+        measurementId: "G-MN0R6CL4XM"
       };
     
       // Initialize Firebase
       const app = initializeApp(firebaseConfig);
-
-      const db = getFirestore();
-
-      const colRef = collection(db, 'Museums');
-
-      getDocs(colRef)
-        .then((snapshot) => { 
-          console.log(snapshot.docs)
-        })
-    </script>
+      const analytics = getAnalytics(app);
+    </script> 
   </body>
 </html>
