--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
     
       // Initialize Firebase
       const app = initializeApp(firebaseConfig);
+      const db = getFirestore(app);
       const analytics = getAnalytics(app);
     </script> 
   </body>
