--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                 <th>Address</th>
                 <th>Rating</th>
                 <th>Open Now?</th>
+                <th></th>
             </tr>
         </table>
     </div>
@@ -33,7 +34,7 @@
       // Import the functions you need from the SDKs you need
       import { initializeApp } from "https://www.gstatic.com/firebasejs/9.6.10/firebase-app.js";
       import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.6.10/firebase-analytics.js";
-      import { getFirestore } from "https://www.gstatic.com/firebasejs/9.6.10/firebase-firestore.js"
+      import { getFirestore, collection, addDoc } from "https://www.gstatic.com/firebasejs/9.6.10/firebase-firestore.js"
       // TODO: Add SDKs for Firebase products that you want to use
       // https://firebase.google.com/docs/web/setup#available-libraries
     
@@ -51,8 +52,8 @@
     
       // Initialize Firebase
       const app = initializeApp(firebaseConfig);
-      const db = getFirestore(app);
       const analytics = getAnalytics(app);
+      const db = getFirestore(app);
     </script> 
   </body>
 </html>
