--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       // Import the functions you need from the SDKs you need
       import { initializeApp } from "https://www.gstatic.com/firebasejs/9.6.10/firebase-app.js";
       import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.6.10/firebase-analytics.js";
-      import { getFirestore, collection, addDoc } from "https://www.gstatic.com/firebasejs/9.6.10/firebase-firestore.js"
+      import { getFirestore, collection, doc, addDoc, setDoc } from "https://www.gstatic.com/firebasejs/9.6.10/firebase-firestore.js"
       // TODO: Add SDKs for Firebase products that you want to use
       // https://firebase.google.com/docs/web/setup#available-libraries
     
@@ -53,7 +53,23 @@
       // Initialize Firebase
       const app = initializeApp(firebaseConfig);
       const analytics = getAnalytics(app);
-      const db = getFirestore(app);
+      //const db = getFirestore(app);
+      const firestore = getFirestore();
+      const museum = doc(firestore, 'Museums/2022-4-15');
+      async function writeMuseum() {
+        const docData = {
+          name: "The Smithsonian",
+          address: "The National Mall",
+          rating: 5,
+        };
+        try {
+          await setDoc(museum, docData);
+          console.log("Value has been written");
+        } catch (error){
+          console.log("Error: ");
+        }
+      }
+      writeMuseum();
     </script> 
   </body>
 </html>
